--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "wsserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "exports": "./index.ts",
   "scripts": {
-    "dev": "nodemon --exec npx ts-node ./src/index.ts"
+    "dev": "nodemon --ignore ./src/services/*.json --exec npx ts-node ./src/index.ts "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "helmet": "^6.0.0",
     "pino": "^8.7.0",
     "request-ip": "^3.3.0",
+    "simple-json-db": "^2.0.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
