--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^6.0.0",
     "pino": "^8.7.0",
     "request-ip": "^3.3.0",
+    "simple-body-validator": "^1.2.6",
     "simple-json-db": "^2.0.0",
     "ws": "^8.11.0"
   },
