--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv-flow": "^3.2.0",
@@ -24,6 +25,7 @@
     "ws": "^8.11.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-pino-logger": "^4.0.3",
