--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.14",
     "@types/express-pino-logger": "^4.0.3",
     "@types/http-errors": "^2.0.1",
